--- a/CPU-Scheduling/index.html
+++ b/CPU-Scheduling/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>FCFS</h1>
+        <h1 id="algorithm"></h1>
         <div id="data">
             <table id="given-processes">
                 <tr>
