add link codepen author info

--- a/CPU-Scheduling/index.html
+++ b/CPU-Scheduling/index.html
@@ -3,6 +3,11 @@
     <head>
         <title>CPU Scheduling</title>
         <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta author="thrillim-HH-2*****89">
+        <!-- https://github.com/thrillim/Operating-System/tree/main/CPU-Scheduling -->
+        <!--https://codepen.io/thrillim/full/MWqyQbw-->
     </head>
     <body>
         <h1 id="algorithm"></h1>
