LRU, MRU, LFU, MFU, 2nd chance and add frame model

--- a/PageReplacement/index.html
+++ b/PageReplacement/index.html
@@ -37,7 +37,7 @@
       class="input input-bordered input-sm w-sm max-w-sm"
     />
     <div class="grid grid-flow-col-dense py-2 gap-1">
-      <div>
+      <div class="mt-2">
         <select
           id="select-algorithm"
           class="select select-primary w-full max-w-xs"
@@ -91,6 +91,17 @@
     id="conclusion"
     class="px-10"
   ></div>
+  <div
+    id="frame-info"
+    class="hidden"
+  >
+    page number
+    <div
+      id="frame-sub-info"
+      class="text-xs text-info text-center"
+    ></div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 
