fix bug Optimal, LFU, MFU and add conclusion

--- a/PageReplacement/index.html
+++ b/PageReplacement/index.html
@@ -85,11 +85,7 @@
   </div>
   <div
     id="visual-page-frames"
-    class="flex flex-wrap justify-around my-2"
-  ></div>
-  <div
-    id="conclusion"
-    class="px-10"
+    class="flex flex-wrap justify-around my-2 mx-1"
   ></div>
   <div
     id="frame-info"
@@ -101,6 +97,10 @@
       class="text-xs text-info text-center"
     ></div>
   </div>
+  <div
+    id="conclusion"
+    class="grid grid-cols-3 text-center py-1"
+  ></div>
 
   <script src="script.js"></script>
 </body>
