2nd chance: change inital bit to 1, hit do nothing

--- a/PageReplacement/index.html
+++ b/PageReplacement/index.html
@@ -26,14 +26,14 @@
       id="ref-string"
       type="text"
       placeholder="1, 2, 3, ..."
-      value="7,0,1,2,0,3,0,4,2,3,0,3,0,3,2,1,2,0,1,7,0,1"
+      value="7, 2, 3, 1, 2, 5, 3, 4, 6, 7, 7, 1, 0, 5, 4, 6, 2, 3, 0, 1"
       class="input input-bordered input-sm w-full max-w-3xl"
     />
     <input
       id="separator"
       type="text"
       placeholder="Separate by (eg. ', ')"
-      value=","
+      value=", "
       class="input input-bordered input-sm w-sm max-w-sm"
     />
     <div class="grid grid-flow-col-dense py-2 gap-1">
